fixed overflowing categories

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,7 +6,6 @@ body{
   position: fixed;
   height: 100%;
   width: 100%;
-  padding: 1rem;
 }
 
 .bg-hero-pattern{
